--- a/park.html
+++ b/park.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/all.css">
-    <title>Nature at Its Finest</title>
+    <title>Nature at its Finest</title>
+    
 </head>
 
 <body>
@@ -24,6 +26,7 @@
         </nav>
     </div>
     <!-----End Header Section----->
+    <script src="locationData.js"></script>
 </body>
 
 </html>
