--- a/mountains.html
+++ b/mountains.html
@@ -9,23 +9,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <link rel="stylesheet" href="styles/main.css">
+    <script src="data/mountainData.js"></script>
     <script src="scripts/main.js"></script>
-</head>
-<body class="home">
-    <nav id="nav"></nav>
-    <h1>Welcome!</h1>
-    <a href="parks.html">
-        <button>
-            <img src="images/parks.jpg"><br>
-            Parks
-        </button>
-    </a>
-    <a href="mountains.html">
-        <button>
-            <img src="images/CDome-StoryImage.jpg"><br>
-            Mountains
-        </button>
-    </a>
+    <script src="scripts/mountains.js"></script>
     
+</head>
+<body>
+    <nav id="nav"></nav>
+    <h1>Mountains</h1>
+    <select id="effort"></select><br>
+    <div id="results"></div>
 </body>
 </html>
