--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a href="parks.html">
         <button>
             <img src="images/parks.jpg"><br>
-            Parks
+            Find a Park
         </button>
     </a>
     <a href="mountains.html">
